ocp/default/c-logging/kibana/c-logging-kibana-svc.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    service.alpha.openshift.io/serving-cert-secret-name: c-logging-kibana-proxy-tls
  labels:
    k8s-app: c-logging-kibana
    app.kubernetes.io/managed-by: iscp
    app.kubernetes.io/app-name: application_logging
    app.kubernetes.io/app-catalog: simple
    app.kubernetes.io/app-sla: 24x7
    app.kubernetes.io/app-management: application
    app.kubernetes.io/component: kibana
    app.kubernetes.io/version: 8.17.0
  name: c-logging-kibana
  namespace: c-logging
spec:
  ports:
  - name: http
    port: 5601
    protocol: TCP
    targetPort: 5601
  selector:
    common.k8s.elastic.co/type: kibana
    kibana.k8s.elastic.co/name: c-logging-kibana
  type: ClusterIP
